# django-azure-auth-testbench

./: .gitignore  README.md  pyproject.toml
django_azure_auth_testbench/: manage.py
django_azure_auth_testbench/django_azure_auth_testbench/: asgi.py  settings.py  urls.py  wsgi.py
django_azure_auth_testbench/main/: urls.py  views.py
django_azure_auth_testbench/main/migrations/: 0001_initial.py
django_azure_auth_testbench/main/templates/main/: home.html  protected.html
